--- a/www/api/composer.json
+++ b/www/api/composer.json
@@ -13,10 +13,14 @@
     ],
     "autoload": {
         "psr-4": {
-            "App\\": "app/src"
+            "App\\": [
+              "app/src",
+              "tests/app/src"
+            ]
         }
     },
     "require-dev": {
+        "phpunit/phpunit": "4.8.*",
         "squizlabs/php_codesniffer": "2.*"
     },
     "require": {
