--- a/www/api/composer.json
+++ b/www/api/composer.json
@@ -23,6 +23,7 @@
         "monolog/monolog": "^1.13",
         "rctnet/opencnabphp": "@dev",
         "tiexpert/ws-boleto-santander": "@dev",
-        "andersondanilo/cnab_php": "@dev"
+        "andersondanilo/cnab_php": "@dev",
+        "cobregratis/boletophp": "dev-2.x-dev"
     }
 }
