--- a/conf/php.ini
+++ b/conf/php.ini
@@ -19,6 +19,8 @@ hhvm.server.fix_path_info = true
 hhvm.server.thread_count = 16
 hhvm.server.enable_keep_alive = true
 hhvm.server.enable_ssl = true
+hhvm.dynamic_extensions[mongo]=mongo.so
+hhvm.dynamic_extensions[mongodb]=mongodb.so
 
 ; Custom APC configuration
 hhvm.server.apc.enable_apc = true
