Rawgit para imagens

--- a/conf/php.ini
+++ b/conf/php.ini
@@ -1,15 +1,15 @@
 ; Enable XDebug
-zend_extension = xdebug.so
+;zend_extension = xdebug.so
 
 ; XDebug configuration
-xdebug.remote_enable = 1
-xdebug.renite_enable = 1
-xdebug.max_nesting_level = 1000
-xdebug.profiler_enable_trigger = 1
-xdebug.profiler_output_dir = "/var/log"
+;xdebug.remote_enable = 0
+;xdebug.renite_enable = 0
+;xdebug.max_nesting_level = 1000
+;xdebug.profiler_enable_trigger = 1
+;xdebug.profiler_output_dir = "/var/log"
 
 ; Show PHP errors
-display_errors = on
+display_errors = off
 
 ; Use PHP short tags
 short_open_tag = on
