--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -2,16 +2,11 @@
 nodaemon=true
 
 [program:nginx]
-command = /usr/sbin/nginx
+command = service nginx start
 user = root
 autostart = true
 
 [program:php5-fpm]
 command = /usr/sbin/php5-fpm -FR
-user = root
-autostart = true
-
-[program:hhvm-fastcgi]
-command = hhvm --mode server -vServer.Type=fastcgi -vServer.FileSocket=/var/run/hhvm/hhvm.sock
 user = root
 autostart = true
