--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,5 @@
 user root;
-worker_processes 2;
+worker_processes auto;
 daemon off;
 
 error_log /var/log/nginx/error.log warn;
@@ -7,6 +7,8 @@ pid /var/run/nginx.pid;
 
 events {
   worker_connections 1024;
+  multi_accept on;
+  use epoll;
 }
 
 http {
@@ -24,7 +26,17 @@ http {
 
   keepalive_timeout 65;
 
-  gzip on;
+    gzip on;
+    gzip_disable "msie6";
+    gzip_static on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 9;
+    gzip_buffers 16 8k;
+    gzip_http_version 1.1;
+    gzip_types text/plain text/css text/csv application/json application/javascript application/x-javascript image/x-icon text/xml application/xml application/xml+rss text/javascript;
+
+
 
   include /etc/nginx/conf.d/*;
 }
