--- a/conf/php.ini
+++ b/conf/php.ini
@@ -9,32 +9,65 @@
 ;xdebug.profiler_output_dir = "/var/log"
 
 ; Show PHP errors
-display_errors = off
+display_errors = on
 
 ; Use PHP short tags
 short_open_tag = on
 
-; Custom server configuration
-hhvm.server.fix_path_info = true
-hhvm.server.thread_count = 16
-hhvm.server.enable_keep_alive = true
-hhvm.server.enable_ssl = true
-hhvm.dynamic_extensions[mongo]=mongo.so
-hhvm.dynamic_extensions[mongodb]=mongodb.so
+[mongo]
+extension=mongo.so
 
-; Custom APC configuration
-hhvm.server.apc.enable_apc = true
-hhvm.server.apc.table_type = concurrent
-hhvm.server.apc.expire_on_sets = true
-hhvm.server.apc.purge_frequency = 4096
+[APC]
+apc.enabled=1
+apc.shm_segments=1
 
-; Custom MySQL configuration
-hhvm.mysql.slow_query_threshold = 10000
+;32M per WordPress install
+apc.shm_size=128M
 
-; Custom configuration
-; @see https://github.com/facebook/hhvm/issues/2851
-hhvm.jit_a_size = 536870912
-hhvm.jit_a_cold_size = 268435456
-hhvm.jit_a_frozen_size = 536870912
-hhvm.jit_a_prof_size = 536870912
-hhvm.jit_a_max_usage = 536870912
+;Relative to the number of cached files (you may need to watch your stats for a day or two to find out a good number)
+apc.num_files_hint=7000
+
+;Relative to the size of WordPress
+apc.user_entries_hint=4096
+
+;The number of seconds a cache entry is allowed to idle in a slot before APC dumps the cache
+apc.ttl=7200
+apc.user_ttl=7200
+apc.gc_ttl=3600
+
+;Setting this to 0 will give you the best performance, as APC will
+;not have to check the IO for changes. However, you must clear 
+;the APC cache to recompile already cached files. If you are still
+;developing, updating your site daily in WP-ADMIN, and running W3TC
+;set this to 1
+apc.stat=1
+
+;This MUST be 0, WP can have errors otherwise!
+apc.include_once_override=0
+
+;Only set to 1 while debugging
+apc.enable_cli=0
+
+;Allow 2 seconds after a file is created before it is cached to prevent users from seeing half-written/weird pages
+apc.file_update_protection=2
+
+;Leave at 2M or lower. WordPress does't have any file sizes close to 2M
+apc.max_file_size=2M
+
+;Ignore files
+apc.filters = "/var/www/apc.php"
+
+apc.cache_by_default=1
+apc.use_request_time=1
+apc.slam_defense=0
+apc.stat_ctime=0
+apc.canonicalize=1
+apc.write_lock=1
+apc.report_autofilter=0
+apc.rfc1867=0
+apc.rfc1867_prefix =upload_
+apc.rfc1867_name=APC_UPLOAD_PROGRESS
+apc.rfc1867_freq=0
+apc.rfc1867_ttl=3600
+apc.lazy_classes=0
+apc.lazy_functions=0
