Composer bug fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ pbc-front:
     - "9000:9000"
   links:
     - pbc-mongodb:pbc-mongodb
+  build: ./
   volumes:
     - ./www:/var/www
     - ./sites:/etc/nginx/conf.d
